# game_dev

./: CMakeLists.txt  run.sh
src/: ball.cpp  ball.h  main.cpp  paddle.cpp  paddle.h
